# mesa

./: .gitignore  Cargo.toml  build.rs  meson.build  meson_options.txt
src/: lib.rs  meson.build
src/compiler/: shader_enums.h
src/compiler/glsl/: builtin_variables.cpp  glsl_lexer.ll
src/compiler/glsl/glcpp/: glcpp-parse.y
src/gallium/drivers/vc4/: vc4_program.c  vc4_qir_schedule.c
src/mesa/main/: shaderapi.c  shaderapi.h
src/vc4-glsl/: ir_vertex_attribute_visitor.cpp  ir_vertex_attribute_visitor.h  meson.build  vc4-disasm.c  vc4-disasm.h  vc4-glsl.c  vc4-standalone.cpp  vc4-standalone_scaffolding.cpp  vc4-standalone_scaffolding.h
src/vc4-glsl/drm-headers/: xf86drm.h
